--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -22,7 +22,7 @@ window_border_width 0.5
 hide_window_decorations titlebar-only
 
 # window padding
-window_padding_width 10.0
+window_padding_width 18
 
 # Powerline style tabs
 tab_bar_style powerline
@@ -64,16 +64,16 @@ map kitty_mod+t    new_tab_with_cwd
 map kitty_mod+n    new_os_window_with_cwd
 
 # Gruvbox Theme
-background #242424
+background #282828
 foreground #ebdbb2
 
-selection_background #272727
+selection_background #ebdbb2
 selection_foreground #655b53
 
 cursor #ebdbb2
 
 # black
-color0 #272727
+color0 #282828
 color8 #928373
 
 # red
